# neural

./: CMakeLists.txt
src/exe/: main.cpp
src/lib/: hello.cpp  hello.h
src/lib/network/: Layer.cpp  Layer.h  Network.cpp  Network.h  ValidationFunction.cpp  ValidationFunction.h
